Always talk to the es gateway on localhost
Signed-off-by: Jay Mundrawala <jmundrawala@chef.io>

--- a/components/automate-cs-nginx/habitat/config/nginx.conf
+++ b/components/automate-cs-nginx/habitat/config/nginx.conf
@@ -71,7 +71,7 @@ http {
 
   upstream opscode_solr4 {
 {{~#eachAlive bind.automate-es-gateway.members as |member|}}
-    server {{member.sys.ip}}:{{member.cfg.http-port}};
+    server 127.0.0.1:{{member.cfg.http-port}};
 {{~/eachAlive}}
     keepalive 8;
   }
