--- a/components/automate-es-gateway/habitat/config/nginx.conf
+++ b/components/automate-es-gateway/habitat/config/nginx.conf
@@ -52,7 +52,7 @@ http {
   proxy_temp_path {{pkg.svc_data_path}}/cache-tmp;
 
   server {
-    listen {{cfg.service.host}}:{{cfg.service.port}};
+    listen 127.0.0.1:{{cfg.service.port}};
 
     server_tokens off;
 
